z-index fix

--- a/assets/css/blog/kudos.css
+++ b/assets/css/blog/kudos.css
@@ -55,7 +55,7 @@ figure.kudo{
 	bottom: 5px;
 	text-align:center;
 	margin-bottom: 5px;
-	z-index: 999909;
+	z-index: 20;
 	margin-right: 7px;
 	transform: scale(0.8);
     -webkit-transform: scale(0.8);
